# indigo-store

./: Cargo.toml  README.md
examples/: custom_state.rs  type_map.rs
src/: lib.rs  listener.rs  reducer.rs  store.rs  type_map.rs
