[package]
name = "indigo-store"
version = "0.1.0"
authors = ["Evan Relf <evan@evanrelf.com>"]
license = "ISC"
edition = "2024"

[dependencies]

[[example]]
name = "type_map"

[[example]]
name = "custom_state"

[lints]
clippy.missing_errors_doc = "allow"
clippy.missing_panics_doc = "allow"
clippy.pedantic = { level = "warn", priority = -1 }
